--- a/arm_move/package.xml
+++ b/arm_move/package.xml
@@ -53,10 +53,12 @@
  
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>moveit_msgs</build_export_depend>
 
-  <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>moveit_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
