First draft of test setup is complete

--- a/arm_move/CMakeLists.txt
+++ b/arm_move/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   moveit_msgs
+  rostest
 )
 
 ## System dependencies are found with CMake's conventions
@@ -164,6 +165,7 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
   nodes/mover
+  test/motion_test
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
@@ -205,5 +207,7 @@ catkin_install_python(PROGRAMS
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
 
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+if(CATKIN_ENABLE_TESTING)
+  add_rostest(test/arm.test)
+  catkin_add_nosetests(test)
+endif()
