--- a/diff_drive/package.xml
+++ b/diff_drive/package.xml
@@ -56,6 +56,7 @@
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>rviz</exec_depend>
 
 
